tests/should-fail/rawcodes/rawcodelit-1.j
globals
    integer e = '\\abc'
endglobals